styles/style.css
.page {
  min-width: 1100px;
  /* мы ещё не умеем делать мобильную версию сайта, */
  /* поэтому выше установлена минимальная ширина страницы */
  max-width: 1600px;
  /* выше установили ограничение по максимальной ширине */
  margin: 0 auto;
  /* выше для экранов больше 1600px отцентрировали весь контент */
  font-family: 'Helvetica Neue', Arial, sans-serif;
}

.header {
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  /* выше установили ограничения для секции */
}

.margin-reset {
  margin: 0;
  padding: 0;
}

:root {
  --bg-black: #1f1f1f;
  --bg-grey: #f2f2f2;
  --color-blue: #2f80ed;
  --text-black: #000;
}

.header {
  min-height: 600px;
  max-height: 756px;
  position: relative;
  background-color: var(--bg-grey);
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.header-logo {
  background-image: url(/images/logo_place_header.svg);
  position: absolute;
  top: 30px;
  left: 64px;
}

.logo_place_header {
  background-size: contain;
  width: 228px;
  height: 32px;
}

.header__title {
  line-height: 96px;
  font-size: 102px;
  font-weight: 600;
  color: var(--text-black);
  width: 730px;
  margin-left: 64px;
  z-index: 3;
}

.header__subtitle {
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
  color: var(--text-black);
  width: 388px;
  position: absolute;
  bottom: 30px;
  left: 64px;
  z-index: 3;
}

.header__link {
  color: var(--color-blue);
  text-decoration: none;
  z-index: 3;
}

.header__main-illustration {
  background-image: url(/images/header-image.png);
  width: 765px;
  height: 608px;
  background-size: cover;
  background-repeat: no-repeat;
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 2;
}

.header__square-pic {
  width: 568px;
  height: 568px;
  background-color: var(--color-blue);
  position: absolute;
  top: 64px;
  right: 0;
  z-index: 1;
}

.description {
  display: flex;
  justify-content: center;
  margin: 100px auto;
}

.two-columns {
  width: 80%;
  display: flex;
  justify-content: space-between;
}

.two-columns__brief {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  color: var(--color-blue);
  width: 175px;
}

.two-columns__main-text {
  width: 80%;
  min-width: 784px;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.two-columns__paragraph {
  margin-bottom: 30px;
}

.two-columns__paragraph:last-child {
  margin-bottom: 0;
}

.two-columns__paragraph-text {
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  color: var(--text-black);
}

.two-columns__span-accent {
  line-height: 34px;
  font-size: 24px;
  font-weight: 600;
  color: var(--text-black);
}

.digits {
  margin: 100px auto;
}

.section-title {
  line-height: 1.15;
  font-size: 60px;
  font-weight: 600;
  color: var(--text-black);
  display: flex;
  width: 60%;
  justify-content: center;
  margin: auto;
  text-align: center;
}

.section-subtitle {
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  color: var(--text-black);
  display: flex;
  width: 60%;
  justify-content: center;
  margin: auto;
  text-align: center;
}

.table {
  border-collapse: collapse;
  width: 1100px;
  margin: auto;
}

.table__row {
  display: flex;
  justify-content: space-between;
}

.table__cell {
  padding: 0;
  margin-top: 60px;
}

.digits__cell {
  width: 250px;
}

.table__heading {
  line-height: 1.15;
  font-size: 24px;
  font-weight: 600;
}

.table__text {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  margin: 20px 0;
}

.table__text:last-child {
  margin-bottom: 0;
}

.feynman {
  height: 890px;
  background-image: url(/images/feynman.png);
  background-repeat: no-repeat;
  background-size: 867px 637px;
  background-position: bottom left;
  margin-top: 100px;
  position: relative;
}

.feynman-title {
  line-height: 1.15;
  font-size: 120px;
  font-weight: 600;
  width: 648px;
  text-align: center;
  margin: 100px auto 70px;
  color: var(--text-black);
}

.feynman-subtitle {
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
  width: fit-content;
  text-align: center;
  margin: 0 auto;
  color: var(--text-black);
}

.feynman-link {
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
  position: absolute;
  top: 50%;
  right: 48px;
  text-decoration: none;
  color: var(--color-blue);
}

.kaufman{
  background-color: var(--bg-black);
  padding: 90px 0;
  position: relative;
  overflow: hidden;
}

.section-title_theme_dark{
  color: white;
}

.section-subtitle_theme_dark{
  color: white;
}

.kaufman-table{
  margin: auto;
  position: relative;
}
/* и элемента с модификатором вида ключ-значение */
.table__cell_theme_dark {
  width: 200px;
  color: white;
  margin-right: 0;
  margin-top: 80px;
}

.kaufman__triangle{
  width: 877px;
  height: 877px;
  background-image: url(/images/kaufman-triangle.svg);
  background-size: contain;
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  right: -210px;
}

